2007-12-03    <mschimek@users.sf.net>

	* src/dvb_demux.c (demux_pes_packet): Bug fix: Did not skip start
	  codes with invalid stream_id 0x00 ... 0xBB, looping
	  forever. Discovered by Tom.

	* test/test-dvb_demux.cc: New regression test for start code bug.

	* configure.in: Bumped version to 0.2.27, incremented .so revision
	  and added a strerror_r() check.

2007-12-02    <tomzo@users.sf.net>

	* src/proxy-client.c: Fixed nasty bug: STDIN was closed after
	  connect failure due to close() on uninitialized sock_fd.

2007-11-27    <mschimek@users.sf.net>

	* Release 0.2.26.

2007-11-26    <mschimek@users.sf.net>

	* src/xds_demux.h, src/pfc_demux.h, src/pfc_demux.c,
	  src/idl_demux.h: Doxumentation fixes.

	* doc/Doxyfile.in (FILE_PATTERNS): Added pfc_demux.h.

	* src/xds_demux.h, src/vt.h, src/vps.h, src/sliced_filter.h,
	  src/sliced.h, src/sampling_par.h, src/pfc_demux.h,
	  src/page_table.h, src/misc.h, src/macros.h, src/io-v4l.c,
	  src/idl_demux.h, src/export.h, src/exp-txt.c, src/exp-gfx.c,
	  src/dvb_mux.h, src/dvb_demux.h, src/conv.h, src/caption.c, 
	  src/bit_slicer.h: Use _vbi_attribute macro instead of
	  __attribute__ so we can safely disable it in libzvbi.h if
	  there are compiler problems.

	* src/macros.h: Changed the dummy definitions of _vbi_nonnull,
	  _vbi_format, _vbi_pure and _vbi_alloc because GCC 2.95 aborts
	  with an error if __attribute__ has no parameters.

	* src/sampling_par.c, src/raw_decoder.c, src/misc.h, src/macros.h,
	  src/lang.h, src/io-sim.c, src/hamm.h, src/exp-txt.h,
	  src/exp-gfx.h, src/dvb_mux.c, src/dvb_demux.c, src/decoder.h,
	  src/bcd.h: Renamed vbi_inline to _vbi_inline (private macro).

	* README, BUGS: Updated.

2007-11-25    <mschimek@users.sf.net>

	* test/sliced2pes.c: Must include unistd.h to declare optarg.
	* src/export.h, src/misc.h: Include sys/types.h to define
	  (s)size_t.
	* src/misc.h: Define SIZE_MAX if not in limits.h because this is
	  a C99(?) extension. Define __va_copy() if not in stdarg.h