@@ -23,7 +23,7 @@ PROJECT_NAME           = "ZVBI Library"
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 0.2.26
+PROJECT_NUMBER         = 0.2.27
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
