@@ -4,25 +4,31 @@ TESTS = \
 	cpptest \
 	exoptest \
 	hamm \
-	test-raw_decoder \
+	test-dvb_demux \
 	test-dvb_mux \
+	test-raw_decoder \
 	test-vps
 
 check_PROGRAMS = \
 	cpptest \
 	explist \
 	hamm \
-	test-raw_decoder \
-	test-dvb_mux
+	test-dvb_demux \
+	test-dvb_mux \
+	test-raw_decoder
 
 cpptest_SOURCES = cpptest.cc
 
-test_raw_decoder_SOURCES = \
-	test-raw_decoder.cc \
+test_dvb_demux_SOURCES = \
+	test-dvb_demux.cc \
 	test-common.cc test-common.h
 
 test_dvb_mux_SOURCES = \
 	test-dvb_mux.cc \
+	test-common.cc test-common.h
+
+test_raw_decoder_SOURCES = \
+	test-raw_decoder.cc \
 	test-common.cc test-common.h
 
 check_SCRIPTS = \
